feat: modify add response
